# rust4bix_note

./: .gitignore  404.html  Cargo.toml  README.md  _quarto.yml  index.html  mkdocs.yaml  search.html
.devcontainer/: devcontainer.json
.github/workflows/: build_book.yml
book/: fasta.md  fasta.qmd  fasta_io.ipynb  index.md  index.qmd  rs_intro_ch10_genomics_interval.ipynb  rs_intro_ch1_core_syntax_types.ipynb  rs_intro_ch3_read_write_file.ipynb  rs_intro_ch6_generics_type_lifetime.ipynb
book/.ipynb_checkpoints/: fasta_io-checkpoint.ipynb
data/book/: ref.fa
examples/: tryit.rs
examples/basic/: path_pathbuf.rs
examples/cli/: cli_basic.rs
examples/justtry/: tryit.rs
fasta_io/: index.html
rs_intro_ch10_genomics_interval/: index.html
rs_intro_ch1_core_syntax_types/: index.html
rs_intro_ch3_read_write_file/: index.html
rs_intro_ch4_Printing_and_Formatting_Output/: index.html
rs_intro_ch5_Error_Handling/: index.html
rs_intro_ch6_generics_type_lifetime/: index.html
rs_intro_ch6_struct_data_model/: index.html
rs_intro_ch7_Iterators_and_functional_mapping copy/: index.html
rs_intro_ch8_working_with_sequence copy/: index.html
rs_intro_ch9_reading_fa_fq/: index.html
search/: search_index.json
